# overseerr-mcp

./: .app.json  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Justfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  gemini-extension.json  lefthook.yml  overseerr-mcp-server.py  overseerr.subdomain.conf  plugin.json  pyproject.toml  server.json
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  codex-plugin-scanner.yml
docs/: CHECKLIST.md  CONFIG.md  ENV.md  GUARDRAILS.md  INVENTORY.md  README.md  SETUP.md  overseerr.subdomain.conf
docs/mcp/: AUTH.md  CICD.md  CLAUDE.md  CONNECT.md  DEPLOY.md  DEV.md  ELICITATION.md  ENV.md  LOGS.md  MCPORTER.md  MCPUI.md  PATTERNS.md  PRE-COMMIT.md  PUBLISH.md  RESOURCES.md  SCHEMA.md  TESTS.md  TOOLS.md  TRANSPORT.md  WEBMCP.md
docs/plugin/: AGENTS.md  CHANNELS.md  CLAUDE.md  COMMANDS.md  CONFIG.md  HOOKS.md  MARKETPLACES.md  OUTPUT-STYLES.md  PLUGINS.md  SCHEDULES.md  SKILLS.md
docs/repo/: CLAUDE.md  MEMORY.md  RECIPES.md  REPO.md  RULES.md  SCRIPTS.md
docs/stack/: ARCH.md  CLAUDE.md  PRE-REQS.md  TECH.md
docs/upstream/: CLAUDE.md
hooks/: hooks.json
hooks/scripts/: sync-env.sh
overseerr_mcp/: __init__.py  client.py  server.py
scripts/: smoke-test.sh
src/: index.ts
tests/: TEST_COVERAGE.md  ci-test-tools.sh  test_live.sh  test_movie.py  test_overseerr_fallback_script.sh  test_overseerr_tool.py  test_request.py  test_search.py  test_tv.py  test_utils.py
(+47 files in other folders)
