[project]
name = "overseerr-mcp"
version = "1.0.0"
description = "FastMCP server for Overseerr media requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
]

[project.scripts]
overseerr-mcp-server = "overseerr_mcp.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
