[project]
name = "overseerr-mcp"
version = "1.0.2"
description = "FastMCP server for Overseerr media requests"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.0",
]

[project.scripts]
overseerr-mcp-server = "overseerr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ty]

[dependency-groups]
dev = ["ruff>=0.9", "ty>=0.0.1a3", "pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
